<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.signup"
    android:id="@+id/frag_signup"
    android:background="@color/grey">

    <TextView
        android:id="@+id/txt_signup_head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryColor"
        android:fontFamily="serif"
        android:text="@string/create_account_label"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:drawableLeft="@mipmap/email"
        android:fontFamily="serif"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_signup_head" />

    <EditText
        android:id="@+id/edt_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:hint="@string/enterpass"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:drawableLeft="@mipmap/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_email" />

    <EditText
        android:id="@+id/edt_register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        android:drawableLeft="@mipmap/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />

    <EditText
        android:id="@+id/edt_register_first_name"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_marginTop="20dp"
        android:drawableLeft="@mipmap/user"
        android:hint="@string/hint_first_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edt_register_last_name"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_confirm_password" />

    <EditText
        android:id="@+id/edt_register_last_name"
        android:layout_width="170dp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@mipmap/user"
        android:hint="@string/hint_last_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edt_register_first_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_confirm_password" />

    <EditText
        android:id="@+id/edt_register_phone"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_phone"
        android:textAlignment="center"
        android:textSize="25sp"
        android:drawableLeft="@mipmap/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_first_name" />

    <EditText
        android:id="@+id/edt_register_location"
        android:fontFamily="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:hint="@string/hint_location"
        android:textAlignment="center"
        android:textSize="20sp"
        android:drawableLeft="@mipmap/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_phone" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@+id/edt_register_location"
        android:layout_marginTop="20dp"
        android:text="@string/create_label"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_location" />

    <TextView
        android:id="@+id/txt_existing_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/existing_user"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>