<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LogIn"
    android:background="@color/grey">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryColor"
        android:fontFamily="serif"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_email_login"
        android:inputType="textEmailAddress"
        android:drawableLeft="@mipmap/email"
        android:layout_width="315dp"
        android:layout_height="62dp"
        android:layout_marginTop="136dp"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:hint="@string/enteremail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txt_password_login"
        android:inputType="textPassword"
        android:layout_width="315dp"
        android:layout_height="62dp"
        android:layout_marginTop="88dp"
        android:fontFamily="serif"
        android:drawableLeft="@mipmap/password"
        android:hint="@string/enterpass"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/login_title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/newUser"
        android:textColor="@color/purple_500"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>